// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section Renderer Snapshots > Badge Section Renderer > renders interests badge section 1`] = `
<div>
  <div
    class=""
    data-has-breakable-content="false"
    data-item="section"
    data-section="interests"
    style="scroll-margin-top: 20px;"
  >
    <div
      class="flex flex-col text-sm font-bold"
    >
      <p
        data-item="heading"
      >
        Interests
      </p>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <span>
        <span
          class="px-2 py-1 bg-gray-200 rounded"
        >
          Open Source Contribution
        </span>
      </span>
      <span>
        <span
          class="px-2 py-1 bg-gray-200 rounded"
        >
          Tech Blogging
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > Badge Section Renderer > renders skills badge section 1`] = `
<div>
  <div
    class=""
    data-has-breakable-content="false"
    data-item="section"
    data-section="skills"
    style="scroll-margin-top: 20px;"
  >
    <div
      class="flex flex-col text-sm font-bold"
    >
      <p
        data-item="heading"
      >
        Skills
      </p>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <span>
        <span
          class="px-2 py-1 bg-blue-600 text-white rounded"
        >
          JavaScript/TypeScript
        </span>
      </span>
      <span>
        <span
          class="px-2 py-1 bg-blue-600 text-white rounded"
        >
          React.js & Next.js
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > Content Section Renderer > renders summary content section 1`] = `
<div>
  <div
    class="flex flex-col"
    data-section="summary"
    style="scroll-margin-top: 20px;"
  >
    <p
      class="text-sm font-bold"
    >
      Summary
    </p>
    <div
      class="text-sm"
    >
      Passionate software engineer with 5+ years of experience
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > Header Section Renderer > renders header section with image 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-section="header"
    style="scroll-margin-top: 20px;"
  >
    <img
      alt="Image"
      class="w-24 h-24 rounded-full"
      src="/images/profileimg.jpeg"
    />
    <span
      class="text-xl font-bold"
    >
      John Doe
    </span>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > Header Section Renderer > renders header section with personal details 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-section="header"
    style="scroll-margin-top: 20px;"
  >
    <p
      class="text-xl font-bold"
    >
      John Doe
    </p>
    <div
      class="flex flex-row flex-wrap gap-2 text-xs"
    >
      <span>
        <span
          class=""
        >
          +1 (555) 123-4567
        </span>
      </span>
      <span>
         | 
        <a
          class=""
          href="mailto:john.doe@email.com"
        >
          john.doe@email.com
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > Inline List Section Renderer > renders skills inline list section 1`] = `
<div>
  <div
    class=""
    data-section="skills"
    style="scroll-margin-top: 20px;"
  >
    <div
      class="flex flex-col text-sm font-bold"
    >
      <p
        data-item="heading"
      >
        Skills
      </p>
    </div>
    <div
      data-item="content"
    >
      <div
        class="flex flex-wrap gap-2"
      >
        <span>
          <span
            class="text-sm"
          >
            JavaScript/TypeScript
          </span>
          <span>
            , 
          </span>
        </span>
        <span>
          <span
            class="text-sm"
          >
            React.js & Next.js
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > List Section Renderer > renders education list section 1`] = `
<div>
  <div
    class=""
    data-item="list-section"
    data-section="education"
    style="scroll-margin-top: 20px;"
  >
    <div
      class="flex flex-col text-sm font-bold"
    >
      <p
        data-item="heading"
      >
        Education
      </p>
    </div>
    <div
      data-item="content"
      id="teacher-content"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-semibold"
          >
            Stanford University
          </span>
          <span
            class="text-xs italic"
          >
            Sep 2015 - Jun 2019
          </span>
        </div>
        <div>
          <span
            class="text-sm"
          >
            Bachelor of Science
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > List Section Renderer > renders experience list section 1`] = `
<div>
  <div
    class=""
    data-item="list-section"
    data-section="experience"
    style="scroll-margin-top: 20px;"
  >
    <div
      class="flex flex-col text-sm font-bold"
    >
      <p
        data-item="heading"
      >
        Experience
      </p>
    </div>
    <div
      data-item="content"
      id="teacher-content"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-semibold"
          >
            Tech Solutions Inc
          </span>
          <span
            class="text-xs italic"
          >
            Jun 2021 - Nov 2024
          </span>
        </div>
        <div>
          <div
            class="text-sm"
            data-canbreak="true"
            data-has-breakable-content="true"
          >
            Led development of microservices architecture serving 1M+ users Implemented CI/CD pipeline reducing deployment time by 60% Mentored team of 5 junior developers
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Section Renderer Snapshots > Table Section Renderer > renders table section 1`] = `
<div>
  <div
    class=""
    data-item="table-section"
    data-section="skills-table"
    style="scroll-margin-top: 20px;"
  >
    <div
      data-item="content"
    >
      <div
        class="grid"
        data-item="table-row"
        style="grid-template-columns: repeat(2, 1fr);"
      >
        <div
          class="font-semibold"
          style="grid-column: 1;"
        />
        <div
          class="text-sm"
          style="grid-column: 2;"
        />
      </div>
      <div
        class="grid"
        data-item="table-row"
        style="grid-template-columns: repeat(2, 1fr);"
      >
        <div
          class="font-semibold"
          style="grid-column: 1;"
        />
        <div
          class="text-sm"
          style="grid-column: 2;"
        />
      </div>
    </div>
  </div>
</div>
`;
